tests/ui/missing/missing-items/missing-type-parameter.rs
fn foo<X>() { }

fn main() {
    foo(); //~ ERROR type annotations needed
}

// ferrocene-annotations: fls_vhpwge5123cm
// Generic Parameters
//
// ferrocene-annotations: fls_lv7w7aalpwm5
// Type Inference
